2008-01-06  Matthias Clasen  <mclasen@redhat.com>

	* glocalfilemonitor.c:
	* glocaldirectorymonitor.c: Mark property nicks and blurbs
	for translation.

2008-01-06  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c: Fix a docs typo.

	* gfileattribute.c: Add information about extended attributes
	to the documentation.  (#505058)

2008-01-04  Alexander Larsson  <alexl@redhat.com>

        * gio-marshal.list:
        * gmountoperation.c:
	Use the right type (uint) for the ask_password signal.

2008-01-04  Alexander Larsson  <alexl@redhat.com>

        * gappinfo.[ch]:
        * gwin32appinfo.c:
        * gio.symbols:
	Add g_app_info_supports_files() 
        Remove desktop arg from g_app_info_should_show().
	
        * gdesktopappinfo.[ch]:
	Implement g_app_info_supports_files() and new should_show()
	Add g_desktop_app_info_set_desktop_env() to set the desktop
	for should_show(). (This will be set by gtk+ later)

2008-01-04  Alexander Larsson  <alexl@redhat.com>

        * gio.symbols:
        * gmemoryinputstream.[ch]:
	Improve API so that you can use multile chunks
	of memory and custom destroy functions. (#506374)

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * gfileinfo.c:
	Handle NULL attribute matchers safely, as we return this
	for empty attribute matcher strings.

2008-01-03  Alexander Larsson  <alexl@redhat.com>

	* gunixmounts.c (g_unix_is_mount_path_system_internal):
	Add /usr/local to list of internal mountpoints

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * glocalfileinfo.c:
	Check for HAVE_LCHOWN (#505887)
	
2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * gfileinfo.h:
        * glocalfileinfo.c:
	Add define for selinux context attribute.
	Fix missing : -> :: namespace separator change
	Fix missing _ -> - name change for xattr-sys.
	(#505058)

2008-01-03  Alexander Larsson  <alexl@redhat.com>

        * fam/Makefile.am:
	Link to libglib and libgobject directly (#504879)
	Patch from Sebastien Bacher
