@@ -1,0 +1,22 @@
+include $(top_srcdir)/Makefile.decl
+
+INCLUDES = 			\
+	-g 			\
+	-I$(top_srcdir) 	\
+	-I$(top_srcdir)/glib 	\
+	-I$(top_srcdir)/gmodule	\
+	-I$(top_srcdir)/gobject	\
+	-I$(top_srcdir)/gio 	\
+	$(GLIB_DEBUG_FLAGS)
+
+noinst_PROGRAMS = $(TEST_PROGS)
+progs_ldadd     = 					\
+	$(top_builddir)/glib/libglib-2.0.la 		\
+	$(top_builddir)/gobject/libgobject-2.0.la	\
+	$(top_builddir)/gio/libgio-2.0.la
+
+
+TEST_PROGS       += memory-input-stream
+memory_input_stream_SOURCES	  = memory-input-stream.c
+memory_input_stream_LDADD	  = $(progs_ldadd)
+
